<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainDangBai">
    <TextView
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/dangbai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>
    <EditText
        android:inputType="text"
        android:id="@+id/dbtieude"
        android:hint="@string/tentruyen"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"></EditText>

    <EditText
        android:id="@+id/dbnoidung"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/noidung"
        android:inputType="text"></EditText>
    <EditText
        android:inputType="textUri"
        android:hint="@string/anhbia"
        android:id="@+id/dbimg"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"></EditText>

    <Button
        android:id="@+id/dbdangbai"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/dangbai"
        android:textColor="@color/white"
        android:background="@drawable/themtruyen"
        android:layout_width="100dp"
        android:layout_height="wrap_content"></Button>
</LinearLayout>