<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lam"
    tools:context=".MainDangKy">
    <ImageView
        android:layout_marginTop="60dp"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:src="@drawable/resume" />

    <TextView
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:text="@string/dangky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <EditText
        android:id="@+id/dkTaiKhoan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/taikhoan"
        android:drawableLeft="@drawable/ic_taikhoan"
        android:textColorHint="@color/lamdam"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/dkMatKhau"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/matkhau"
        android:drawableLeft="@drawable/ic_matkhau"
        android:textColorHint="@color/lamdam"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit"
        android:padding="20dp"
        />
    <EditText
        android:id="@+id/dkEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_email"
        android:textColorHint="@color/lamdam"
        android:layout_gravity="center"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit"
        android:padding="20dp"
        />


    <Button
        android:id="@+id/dkDangKy"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/lamdam"
        android:textColor="@color/white"
        android:text="@string/dangky"
        android:layout_width="200dp"
        android:background="@drawable/botron"
        android:layout_height="wrap_content"></Button>
    <Button
        android:id="@+id/dkDangNhap"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lamdam"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/trovedn"
        android:layout_width="200dp"
        android:background="@drawable/botron"
        android:layout_height="wrap_content"></Button>

</LinearLayout>